--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "express": "3.0.x",
     "jade": "*",
-    "mongoose":"2.7.x"
+    "mongoose":"2.7.x",
+    "mongodb": "0.9.x"
   },
   "engines": {
     "node": "0.8.x"
